<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="10dp"
        android:elevation="20dp"
        app:cardCornerRadius="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Data_Post_Icon"
                    android:textColor="#039BE5"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/Date_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/Date_Post"
                    android:textColor="#039BE5"
                    android:textSize="20sp"
                    app:fontFamily="@font/acme" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Author_Icon"
                    android:textColor="#039BE5"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/Author_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/Author"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    app:fontFamily="@font/amaranth_italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Title_Icon"
                    android:textColor="#039BE5"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/Title_Id"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Title_Id"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_gravity="right"
            android:id="@+id/News_Image"
            android:layout_marginTop="50dp"
            android:layout_marginRight="7dp"
            android:layout_width="115dp"
            android:layout_height="115dp"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>